# protocol

./: .dockerignore  .env.example  .env.prod.example  .gitignore  CLAUDE.md  Caddyfile  Dockerfile  Dockerfile.caddy  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt  rp_training_data.json
backend/app/: __init__.py  main.py
backend/app/core/: config.py  database.py  migrations.py  security.py  seed.py
backend/app/domain/: constants.py  progression.py  propagation.py
backend/app/models/: __init__.py  base.py  daily_targets.py  exercise.py  exercise_performance.py  food_item.py  food_log.py  mesocycle.py  split.py  user.py
backend/app/routers/: auth.py  daily_targets.py  exercises.py  food.py  mesocycles.py  splits.py  workouts.py
backend/app/schemas/: __init__.py  auth.py  daily_targets.py  exercise.py  food.py  mesocycle.py  split.py  workout.py
backend/app/services/: common.py  daily_targets_service.py  exercise_service.py  food_service.py  mesocycle_service.py  split_service.py  workout_service.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial_schema.py  0002_add_users_and_user_id.py  0003_add_split_color.py  0004_rename_sessions_to_split_days.py  0005_add_exercise_performances.py  0006_add_diet.py  0007_remove_bulgarian_split_squat_glutes_duplicate.py  0008_remove_rir_and_deload.py  0009_add_mesocycle_completed_at.py  0010_add_daily_targets.py  (+3 more)
backend/scripts/: import_rp.py
backend/tests/: conftest.py
(+136 files in other folders)
